# espeak-converter

./: .gitignore  build.bat  choice.py  custom_logging_formatter.py  downloader.py  espeak_converter.py  espeak_converter.spec  local_file_adapter.py  main.py  pyproject.toml  readme.md  requirements.txt  start.bat
espeak_converter/: async_tasks_handler.py  config.py  constants.py  converter.py
espeak_converter/converters/: archive_converter.py  fb2_converter.py  file_url_converter.py  flibusta_url_converter.py  path_converter.py
espeak_converter/converters/espeak_converter/: __init__.py  constants.py  espeak_worker.py  lame_worker.py  mp3_writer.py  utils.py  worker.py
espeak_converter/text_processors/: untranslit.py
espeak_converter/ui/: __init__.py  utils.py
espeak_converter/utils/: async_tasks_handler.py  constants.py  request_utils.py  rescaler.py
espeak_converter/utils/request_sender/: __init__.py  base.py  httpx.py
fb2_parser/: __init__.py
