[project]
name = "espeak-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chardet==7.4.3",
    "fb2parser",
    "httpx[socks]==0.28.1",
    "lxml==6.1.1",
    "pydantic==2.13.4",
    "pyinstaller==6.21.0",
    "rich-split==0.1.2",
]

[tool.uv.sources]
fb2parser = { url = "https://github.com/Danstiv/fb2parser/archive/master.zip" }
